# disable-me

./: README.md  pyproject.toml
src/endstone_disable_me/: __init__.py  plugin.py
