[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-disable-me"
version = "0.0.1"
dependencies = []
authors = [
    { name = "Vincent Wu", email = "magicdroidx@gmail.com" },
]
description = "A simple plugin to prevent /me command from execution"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin"]

[project.urls]
Homepage = "https://github.com/endstone-essentials/disable-me"

[project.entry-points."endstone"]
disable-me = "endstone_disable_me:DisableMe"